nginx-static/ALL.yaml
# ------------------------------
# Nginx Deployment
# ------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static
  namespace: test-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-static
  template:
    metadata:
      labels:
        app: nginx-static
    spec:
      containers:
        - name: nginx
          image: nginx:1.29-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-files
              mountPath: /usr/share/nginx/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: static-assets-pvc
        - name: nginx-config
          configMap:
            name: nginx-static-config
---
# ------------------------------
# Nginx Service (NodePort)
# ------------------------------
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-service
  namespace: test-nginx
spec:
  type: NodePort
  selector:
    app: nginx-static
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
